# multiclass_prediction_obesity_risk

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.server  EDA_obesity_risk.ipynb  README.md  docker-compose.yml  env_example  kaggle_download.py  pipeline_utils.py  pyproject.toml  requirements.txt  run_client.py  test_connection.py  test_db.py  test_env.py  test_env_vars.py  test_insert.py  test_psycopg2.py  test_queries.py  test_sqlalchemy.py
.github/: pull_request_template.md
.github/workflows/: ml.yml
client/: app.py
client/assets/: style.css
client/callbacks/: form_callbacks.py
client/components/: input_form.py
client/config/: client_settings.py  fields_config.py
client/pages/: home.py  prediction.py  prediction_form.py  results.py
client/services/: db.py  queries.py
data/eda/: EDA_obesity_risk.ipynb  eda_utils.py  train_IBM.csv  train_final.csv
data/modeling/: Models_benchmarking.ipynb  benchmarks.py  pipeline_utils.py
data/modeling/pkl/: preprocessing_pipeline.pkl  xgboost_optuna_pipeline.pkl
docs/: informe-obesidad.docx  requerimiento-obesidad.docx
server/: .env.example  kaggle_download.py  main.py
server/api/: router.py
server/core/: config.py  schemas.py
server/data/modeling/: Models_benchmarking.ipynb
server/data/modeling/pkl/: xgboost_optuna_pipeline.pkl
server/model/: prediction_model.py
server/services/: db_service.py  eda_plot_service.py  model_loader.py  prediction_service.py  supabase_client.py
tests/: test_benchmarks.py  test_kaggle_download.py  test_pipeline_utils_test.py
