[project]
name = "multi-class-prediction-obesity-risk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dash==3.0.4",
    "docutils==0.21.2",
    "fastapi==0.115.12",
    "flask==3.0.3",
    "fonttools==4.58.0",
    "id==1.5.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "itsdangerous==2.2.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jinja2==3.1.6",
    "joblib==1.5.0",
    "kaggle==1.7.4.5",
    "keyring==25.6.0",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplot==0.1.9",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "more-itertools==10.7.0",
    "narwhals==1.39.1",
    "nest-asyncio==1.6.0",
    "nh3==0.2.21",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pip==24.3.1",
    "plotly==6.1.0",
    "protobuf==6.31.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pyloco==0.0.139",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "readme-renderer==44.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "retrying==1.3.4",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.7.1",
    "simplewebsocketserver==0.1.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "twine==6.1.0",
    "typing==3.10.0.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "ushlex==0.99.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.0.6",
    "zipp==3.21.0",
]
